Fixed issue #5 overlapping navbar

--- a/omod/src/main/webapp/resources/styles/genericPageStyle.css
+++ b/omod/src/main/webapp/resources/styles/genericPageStyle.css
@@ -11,13 +11,13 @@ body {
     position: relative;
 }
 
-@media(max-width: 1329px) and (min-width: 1280px) {
+@media(max-width: 1348px) and (min-width: 1290px) {
     body{
         padding-top: 175px !important;
     }
 }
 
-@media(max-width: 1279px) {
+@media(max-width: 1289px) {
     body{
         padding-top: 200px !important;
     }
